--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -31,8 +31,8 @@
   /* bottom:70px; */
   /* margin-top: -100px; */
   background-color: #070708;
-  z-index: 10;
-  position: relative;
+  /* z-index: 10; */
+  /* position: relative; */
   color: #fff;
   /* height: 100vh; */
   padding: 40px 80px;
@@ -84,7 +84,7 @@
 
 .contact_sub_form {
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
   width: 100%;
 }
 
@@ -107,6 +107,8 @@
   border: 1px solid rgba(35, 35, 41, 1);
   border-radius: 8px;
   gap: 5px;
+  /* position: relative; */
+  /* z-index: 1; */
   align-items: center;
 }
 
